# Soliton

./: .gitignore  CMakeLists.txt  README.md  input.slt  soliton.xml
data/: flotteur_type_1.msh  flotteur_type_2.msh  flotteur_type_4.msh  mesh.geo  mesh.vtk
docs/: Doxyfile.in
docs/report/: dinat.bst  main.lot  main.tex  mypackage.sty  references.bib  references.bib~
docs/report/Annexes/: listelements.tex  mathematique.tex  quadratures.tex
docs/report/Images/: 1D_flotteur_fond.pdf_tex  1D_flotteur_fond_copie.pdf_tex  1D_flotteur_sans_fond.pdf_tex  1D_ponton_fond.pdf_tex  1D_ponton_sans_fond.pdf_tex  2D_flotteur_fond.pdf_tex  2D_flotteur_sans_fond.pdf_tex  SWE_Fond.pdf_tex  dessin.pdf_tex  domain.pdf_tex  flotteur.pdf_tex  surrogate.pdf_tex  triangle_ref.pdf_tex
docs/report/Images/Geogebra/: 1D_schema_divisiondomaine.ggb  (+6 more)
docs/report/TableOfContents/: tableofcontents.tex
docs/report/TableOfFigures/: tableoffigures.tex
docs/report/Theorie/: P1Lagrange.tex  added_mass.tex  analytical_one_way.tex  couplage.tex  equations_euler.tex  flotteur_def.tex  formulation_variationnelle.tex  masse_flotteur.tex  ondes_lineaire.tex  ondes_lineaire_2.tex  rotations_deplacements.tex  sbm.tex
docs/report/TitlePage/: titlepage.tex
execsrc/: CMakeLists.txt
execsrc/conv4mesh/: .main.cpp.swp  CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
execsrc/dfunstructured/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
execsrc/poisson/: CMakeLists.txt  functions.hpp  main.cpp
execsrc/wave/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
genexe_src/: CMakeLists.txt  main.cpp
meshconvergence_src/: CMakeLists.txt  functions.cpp  main.cpp
poisson_convergence_NOTSB_src/: CMakeLists.txt  functions.cpp  main.cpp  main.cpp_old
poisson_example1_NOTSB_src/: CMakeLists.txt  functions.h  main.cpp
poisson_example1_SB_src/: CMakeLists.txt  functions.cpp  main.cpp
poisson_example2_NOTSB_src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
poisson_src/: CMakeLists.txt  main.cpp  main.cpp.autosave
soliton_src/: CMakeLists.txt  Soliton
soliton_src/Algorithms/: algorithms.h
soliton_src/Algorithms/Algo4SBM/: algo4sbm.cpp  algo4sbm.h
soliton_src/Algorithms/AlgoMesh/: algomesh.cpp  algomesh.h
soliton_src/Algorithms/Generator/: generator.cpp  generator.h
soliton_src/Algorithms/Hash4Edges/: hash4edges.cpp  hash4edges.h
soliton_src/Algorithms/Math/: math.cpp  math.h
soliton_src/Algorithms/MeshGenerator/: meshgenerator.cpp  meshgenerator.h
soliton_src/Algorithms/SBM/: sbm.h  surrogate.cpp  surrogate.h
soliton_src/Core/: core.h
soliton_src/Core/Cell/: cell.cpp  cell.h  celltype.cpp  celltype.h  vtkCellType.cpp  vtkCellType.h
soliton_src/Core/Defs4Soliton/: defs4soliton.cpp  defs4soliton.h
soliton_src/Core/Edge/: edge.cpp  edge.h
soliton_src/Core/EnumClass/: enumclass.h
soliton_src/Core/HetContainer/: hetcontainer.h
soliton_src/Core/Mesh/: mesh.cpp  mesh.h  tagphysical.cpp  tagphysical.h
soliton_src/Core/Point/: point.cpp  point.h
soliton_src/Enums/: common_head.h  def_macros.h  enumclass.h  undef_macros.h
soliton_src/Enums/Enums4Cells/: cells_enums.cpp  cells_enums.h
soliton_src/Enums/Enums4FEStore/: festore_enums.cpp  festore_enums.h
soliton_src/Enums/Enums4SuperSolver/: supersolver_enums.cpp  supersolver_enums.h
soliton_src/Enums/Enums4Tags/: tags_enums.cpp  tags_enums.h
soliton_src/IO/: parsers.cpp  parsers.h  writers.cpp  writers.h
soliton_src/ProgDef/: proddef.h
soliton_src/Routines/: routines.cpp  routines.h
soliton_src/Solver/: solver.h
soliton_src/Solver/DFStruct/: dfstore.cpp  dfstore.h  dfstruct.cpp  dfstruct.h  tooldfstruct.cpp  tooldfstruct.h
soliton_src/Solver/FEStruct/: VTK_LINE.cpp  VTK_QUADRATIC_EDGE.cpp  VTK_QUADRATIC_TRIANGLE.cpp  VTK_TRIANGLE.cpp  VTK_VERTEX.cpp  festruct.cpp  festruct.h
soliton_src/Solver/Method/: method.cpp  method.h
soliton_src/Solver/QuadStruct/: quadstore.cpp  quadstore.h  quadstruct.h
soliton_src/Solver/Sto4Sol/: sto4sol.cpp  sto4sol.h
soliton_src/Solver/SuperSolver/: supersolver.h
soliton_src/Solver/UpgradableSolver/: upgradablesolver.h
soliton_test_unit/: CMakeLists.txt  test_lagrange_elements.cpp  test_main.cpp  test_quadrature.cpp
src/: CMakeLists.txt  Soliton  solitonheader.hpp
src/Algorithms/: algorithms.hpp
src/Algorithms/Algo4SBM/: algo4sbm.cpp  algo4sbm.hpp
src/Algorithms/AlgoMesh/: algomesh.cpp  algomesh.hpp
src/Algorithms/Hash4Edges/: hash4edges.cpp  hash4edges.hpp
src/Algorithms/Math/: math.cpp  math.h  math.hpp
src/Algorithms/MeshGenerator/: meshgenerator.cpp  meshgenerator.h  meshgenerator.hpp
src/Core/: core.h  core.hpp
src/Core/Cell/: cell.cpp  cell.h  cell.hpp
src/Core/Edge/: edge.cpp  edge.hpp
src/Core/HetContainer/: hetcontainer.hpp
src/Core/Mesh/: mesh.cpp  mesh.hpp
src/Core/Point/: point.cpp  point.hpp
src/Enums/: common_head.h  common_head.hpp  def_macros.h  def_macros.hpp  enumclass.hpp  enums.h  enums.hpp  undef_macros.hpp
src/Enums/Enums4Cells/: cells_enums.cpp  cells_enums.h  cells_enums.hpp
src/Enums/Enums4FEStore/: festore_enums.cpp  festore_enums.h  festore_enums.hpp
src/Enums/Enums4SuperSolver/: supersolver_enums.cpp  supersolver_enums.hpp
src/Enums/Enums4Tags/: tags_enums.cpp  tags_enums.h  tags_enums.hpp
src/IO/: io.hpp  parsers.cpp  parsers.hpp  writers.cpp  writers.h  writers.hpp
src/ProgDef/: proddef.h  proddef.hpp
src/Routines/: routines.cpp  routines.hpp
src/Solver/: solver.hpp
src/Solver/DFStruct/: dfstore.cpp  dfstore.hpp  dfstruct.hpp  tooldfstruct.cpp  tooldfstruct.h  tooldfstruct.hpp
src/Solver/FEStruct/: festruct.hpp
src/Solver/MeshStorage/: meshstorage.cpp  meshstorage.h  meshstorage.hpp
src/Solver/Method/: method.cpp  method.h  method.hpp
src/Solver/QuadStruct/: quadstore.cpp  quadstore.hpp  quadstruct.hpp
src/Solver/SolitonFE/: solitonfe.h  solitonfe.hpp
src/Solver/SolitonFunctor/: solitonfunctor.cpp  solitonfunctor.hpp
src/Solver/SolitonQueue/: solitonqueue.cpp  solitonqueue.h  solitonqueue.hpp
unit_tests/: test_lagrange_elements.cpp  test_quadrature.cpp
(+127 files in other folders)
